--- a/sandbox/package.json
+++ b/sandbox/package.json
@@ -1,9 +1,11 @@
 {
   "name": "sandbox",
   "version": "0.0.0",
+  "description": "Proyecto 2do Parcial DAW",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
