--- a/sandbox/package.json
+++ b/sandbox/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "express-session": "^1.15.1",
     "mongoose": "^4.8.4",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
