--- a/sandbox/package.json
+++ b/sandbox/package.json
@@ -15,13 +15,15 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "^4.14.1",
+    "express-fileupload": "^0.1.2",
     "express-session": "^1.15.1",
     "mongoose": "^4.8.4",
-    "morgan": "~1.7.0",    
+    "morgan": "~1.7.0",
     "nodemailer": "^3.1.5",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "python-shell": "^0.4.0",
     "serve-favicon": "~2.3.2"
   }
 }
